# ffmpeg-6.1.3

./: .gitignore  config.asm  config.h  config_components.h
doc/: config.texi  developer.html  fate.html  fate.txt  ffmpeg-all.1  ffmpeg-all.html  ffmpeg-all.pod  ffmpeg-bitstream-filters.pod  ffmpeg-codecs.html  ffmpeg-codecs.pod  ffmpeg-devices.pod  ffmpeg-filters.html  ffmpeg-filters.pod  ffmpeg-formats.1  ffmpeg-formats.html  ffmpeg-formats.pod  ffmpeg-protocols.pod  ffmpeg-utils.html  ffmpeg-utils.pod  ffmpeg.pod  ffplay-all.1  ffplay-all.html  ffplay-all.pod  ffplay.1  ffplay.pod  ffprobe-all.1  ffprobe-all.html  ffprobe-all.pod  ffprobe.pod  git-howto.html  print_options
doc/examples/pc-uninstalled/: libavcodec-uninstalled.pc  libavdevice-uninstalled.pc  libavfilter-uninstalled.pc  libavformat-uninstalled.pc  libavutil-uninstalled.pc  libpostproc-uninstalled.pc  libswresample-uninstalled.pc  libswscale-uninstalled.pc
ffbuild/: config.fate  config.mak  config.sh
fftest/: CMakeLists.txt
fftest/include/: testAvCodec.h  testAvDictionary.h  testAvFilter.h  testAvFormat.h  testAvIO.h  testAvInfo.h  testAvLog.h  testAvParseUtil.h  testAvPush.h
fftest/src/: main.cpp  testAvCodec.cpp  testAvDictionary.cpp  testAvFilter.cpp  testAvFormat.cpp  testAvIO.cpp  testAvInfo.cpp  testAvLog.cpp  testAvParseUtil.cpp  testAvPush.cpp
libavcodec/: codec_list.c  libavcodec.pc
libavdevice/: indev_list.c  libavdevice.pc  libavdevice.version
libavfilter/: filter_list.c  libavfilter.pc  libavfilter.version
libavformat/: libavformat.pc
libavutil/: libavutil.pc
libpostproc/: libpostproc.pc  libpostproc.version
libswresample/: libswresample.pc  libswresample.version
libswscale/: libswscale.pc  libswscale.version
